<resources>
    <string name="app_name">myFirstApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textExample">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab alias animi
        blanditiis distinctio doloribus, eius exercitationem expedita illum impedit iure labore non porro quae quidem
        quos sequi veniam veritatis, voluptates?</string>

    <string name="nameSpeaker">Voluptates Dasdas</string>
    <string name="topic">Design</string>

    <string name="textDetailSchedule">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</string>
</resources>
