<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Toolbar
            android:id="@+id/toolbarConference"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </Toolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/descarga"
                        android:scaleType="centerCrop"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/colorPrimary"
                        android:alpha="0.5"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/textDetailSchedule"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:gravity="center_horizontal"
                        android:layout_centerInParent="true"/>
                </RelativeLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="4dp"
                    app:cardElevation="1dp"
                    android:layout_margin="15dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="15:00"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:gravity="center_horizontal"
                        android:layout_centerInParent="true"
                        android:layout_margin="5dp"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/nameSpeaker"
                            android:textSize="15sp"
                            android:textStyle="bold"
                            android:gravity="center_horizontal"
                            android:layout_centerInParent="true"
                            android:layout_margin="5dp"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/topic"
                            android:textSize="@dimen/p"
                            android:textStyle="normal"
                            android:gravity="center_horizontal"
                            android:layout_centerInParent="true"
                            android:layout_margin="5dp"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/textExample"
                            android:textSize="@dimen/p"
                            android:textStyle="normal"
                            android:gravity="center_horizontal"
                            android:layout_centerInParent="true"
                            android:layout_margin="5dp"/>

                    </LinearLayout>


                </androidx.cardview.widget.CardView>


            </LinearLayout>
        </ScrollView>
    </FrameLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>